# Meta-Assinment

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: validate-submission.sh
server/: app.py
supportops_openenv/: __init__.py  baseline.py  environment.py  grading.py  models.py  tasks.py
