[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportops-openenv"
version = "0.1.0"
description = "A real-world support operations environment for agent training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.8.2",
  "PyYAML==6.0.2",
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "openenv-core==0.2.0",
  "openai==2.7.2",
]

[project.scripts]
server = "app:main"
supportops-baseline = "supportops_openenv.baseline:main"

[tool.setuptools]
packages = ["supportops_openenv"]
